--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "### Note\n",
-    "* Instructions have been included for each segment. You do not have to follow them exactly, but they are included to help you think through the steps."
+    "* Instructions have been included for each segment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
     "* Create a summary data frame to hold the results\n",
     "\n",
     "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
+    "* Give the displayed data cleaner formatting\n",
     "\n",
     "\n",
     "* Display the summary data frame\n"
@@ -219,18 +219,18 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_f2b3fe0c_023c_11eb_a3ee_acde48001122\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122row0_col0\" class=\"data row0 col0\" >179</td>\n",
-       "                        <td id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
-       "                        <td id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122row0_col2\" class=\"data row0 col2\" >780</td>\n",
-       "                        <td id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122row0_col3\" class=\"data row0 col3\" >$2,379.77</td>\n",
+       "                        <th id=\"T_f2b3fe0c_023c_11eb_a3ee_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_f2b3fe0c_023c_11eb_a3ee_acde48001122row0_col0\" class=\"data row0 col0\" >179</td>\n",
+       "                        <td id=\"T_f2b3fe0c_023c_11eb_a3ee_acde48001122row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_f2b3fe0c_023c_11eb_a3ee_acde48001122row0_col2\" class=\"data row0 col2\" >780</td>\n",
+       "                        <td id=\"T_f2b3fe0c_023c_11eb_a3ee_acde48001122row0_col3\" class=\"data row0 col3\" >$2,379.77</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7ffe5bc1db00>"
+       "<pandas.io.formats.style.Styler at 0x7fd9a65e3940>"
       ]
      },
      "execution_count": 10,
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -571,7 +571,7 @@
        "Other / Non-Disclosed               $50.19                             $4.56  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
        "40+                                $3.19  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
     "* Sort the purchase count column in descending order\n",
     "\n",
     "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
+    "* Give the displayed data cleaner formatting\n",
     "\n",
     "\n",
     "* Display a preview of the summary data frame\n",
@@ -1436,7 +1436,7 @@
     "* Sort the above table by total purchase value in descending order\n",
     "\n",
     "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
+    "* Give the displayed data cleaner formatting\n",
     "\n",
     "\n",
     "* Display a preview of the data frame\n",
